syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rideApp.AuthService";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc RefreshToken (RefreshRequest) returns (AuthResponse);
}

message LoginRequest {
  string phoneNumber = 1;
  string password = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string role = 3;
}
